@@ -2,11 +2,15 @@
 !#
 ;; "countdown-nested-a-01.hacchpsimscm"
 ;; vi: ft=scheme
-;;	$Id: countdown-nested-a-02.hacchpsimscm,v 1.2 2007/04/20 18:27:17 fang Exp $
+;;	$Id: countdown-nested-a-02.hacchpsimscm,v 1.2.2.1 2007/05/02 00:44:56 fang Exp $
 ;; @haco@ countdown-nested-a.haco-a
 ;; @chpsimtrace countdown-nested-a-03.chpsimtrace
 
 (define trace-name "countdown-nested-a-03.chpsimtrace")
 
 (load-from-path "basic-trace-analysis.hacchpsimscm")
+
+"NOTE: branch histogram entry 3->1 is one too high because the initial arrival
+at the do-while loop-head event is counted as a branch taken when it shouldn't 
+be.  This is a consequence of multiple entry events."
 
