@@ -4,81 +4,81 @@
 (2 20.0 18 . 1)
 (3 20.0 19 . 1)
 (4 30.0 1 . 3)
-(5 40.0 15 . 4)
-(6 50.0 10 . 5)
-(7 60.0 2 . 6)
-(8 70.0 14 . 7)
-(9 80.0 12 . 8)
-(10 80.0 13 . 8)
-(11 90.0 11 . 10)
-(12 100.0 10 . 11)
-(13 110.0 2 . 12)
-(14 120.0 8 . 13)
-(15 130.0 3 . 14)
-(16 140.0 2 . 15)
-(17 150.0 7 . 16)
-(18 160.0 5 . 17)
-(19 160.0 6 . 17)
-(20 170.0 4 . 19)
-(21 180.0 3 . 20)
-(22 190.0 2 . 21)
-(23 200.0 15 . 22)
-(24 210.0 10 . 23)
-(25 220.0 2 . 24)
-(26 230.0 14 . 25)
-(27 240.0 12 . 26)
-(28 240.0 13 . 26)
-(29 250.0 11 . 28)
-(30 260.0 10 . 29)
-(31 270.0 2 . 30)
-(32 280.0 8 . 31)
-(33 290.0 3 . 32)
-(34 300.0 2 . 33)
-(35 310.0 7 . 34)
-(36 320.0 5 . 35)
-(37 320.0 6 . 35)
-(38 330.0 4 . 37)
-(39 340.0 3 . 38)
-(40 350.0 2 . 39)
-(41 360.0 15 . 40)
-(42 370.0 10 . 41)
-(43 380.0 2 . 42)
-(44 390.0 14 . 43)
-(45 400.0 12 . 44)
-(46 400.0 13 . 44)
-(47 410.0 11 . 46)
-(48 420.0 10 . 47)
-(49 430.0 2 . 48)
-(50 440.0 8 . 49)
-(51 450.0 3 . 50)
-(52 460.0 2 . 51)
-(53 470.0 7 . 52)
-(54 480.0 5 . 53)
-(55 480.0 6 . 53)
-(56 490.0 4 . 55)
-(57 500.0 3 . 56)
-(58 510.0 2 . 57)
-(59 520.0 15 . 58)
-(60 530.0 10 . 59)
-(61 540.0 2 . 60)
-(62 550.0 14 . 61)
-(63 560.0 12 . 62)
-(64 560.0 13 . 62)
-(65 570.0 11 . 64)
-(66 580.0 10 . 65)
-(67 590.0 2 . 66)
-(68 600.0 8 . 67)
-(69 610.0 3 . 68)
-(70 620.0 2 . 69)
-(71 630.0 7 . 70)
-(72 640.0 5 . 71)
-(73 640.0 6 . 71)
-(74 650.0 4 . 73)
-(75 660.0 3 . 74)
-(76 670.0 2 . 75)
-(77 680.0 15 . 76)
-(78 690.0 10 . 77)
-(79 700.0 2 . 78)
+(5 40.0 17 . 4)
+(6 50.0 16 . 5)
+(7 60.0 15 . 6)
+(8 70.0 10 . 7)
+(9 80.0 2 . 8)
+(10 90.0 17 . 9)
+(11 100.0 16 . 10)
+(12 110.0 14 . 11)
+(13 120.0 12 . 12)
+(14 120.0 13 . 12)
+(15 130.0 11 . 14)
+(16 140.0 10 . 15)
+(17 150.0 2 . 16)
+(18 160.0 17 . 17)
+(19 170.0 9 . 18)
+(20 180.0 8 . 19)
+(21 190.0 3 . 20)
+(22 200.0 2 . 21)
+(23 210.0 17 . 22)
+(24 220.0 9 . 23)
+(25 230.0 7 . 24)
+(26 240.0 5 . 25)
+(27 240.0 6 . 25)
+(28 250.0 4 . 27)
+(29 260.0 3 . 28)
+(30 270.0 2 . 29)
+(31 280.0 17 . 30)
+(32 290.0 16 . 31)
+(33 300.0 15 . 32)
+(34 310.0 10 . 33)
+(35 320.0 2 . 34)
+(36 330.0 17 . 35)
+(37 340.0 16 . 36)
+(38 350.0 14 . 37)
+(39 360.0 12 . 38)
+(40 360.0 13 . 38)
+(41 370.0 11 . 40)
+(42 380.0 10 . 41)
+(43 390.0 2 . 42)
+(44 400.0 17 . 43)
+(45 410.0 9 . 44)
+(46 420.0 8 . 45)
+(47 430.0 3 . 46)
+(48 440.0 2 . 47)
+(49 450.0 17 . 48)
+(50 460.0 9 . 49)
+(51 470.0 7 . 50)
+(52 480.0 5 . 51)
+(53 480.0 6 . 51)
+(54 490.0 4 . 53)
+(55 500.0 3 . 54)
+(56 510.0 2 . 55)
+(57 520.0 17 . 56)
+(58 530.0 16 . 57)
+(59 540.0 15 . 58)
+(60 550.0 10 . 59)
+(61 560.0 2 . 60)
+(62 570.0 17 . 61)
+(63 580.0 16 . 62)
+(64 590.0 14 . 63)
+(65 600.0 12 . 64)
+(66 600.0 13 . 64)
+(67 610.0 11 . 66)
+(68 620.0 10 . 67)
+(69 630.0 2 . 68)
+(70 640.0 17 . 69)
+(71 650.0 9 . 70)
+(72 660.0 8 . 71)
+(73 670.0 3 . 72)
+(74 680.0 2 . 73)
+(75 690.0 17 . 74)
+(76 700.0 9 . 75)
+(77 710.0 7 . 76)
+(78 720.0 5 . 77)
+(79 720.0 6 . 77)
 ((9 7 8) (16 14 15) (17 9 16))
 "flatten into single associative list:"
 (7 . 9)
@@ -92,4 +92,4 @@
 "make a zero-initialized histogram from successor-lists:"
 ((9 . ((7 . 0) (8 . 0))) (16 . ((14 . 0) (15 . 0))) (17 . ((9 . 0) (16 . 0))))
 "after counting..."
-((9 . ((7 . 4) (8 . 4))) (16 . ((14 . 4) (15 . 5))) (17 . ((9 . 8) (16 . 9))))
+((9 . ((7 . 3) (8 . 3))) (16 . ((14 . 3) (15 . 3))) (17 . ((9 . 6) (16 . 6))))
