@@ -1,6 +1,6 @@
 "branch-event-node (successor . count) ..."
-(9 . ((7 . 4) (8 . 4)))
-(16 . ((14 . 4) (15 . 5)))
-(17 . ((9 . 8) (16 . 9)))
+(9 . ((7 . 3) (8 . 3)))
+(16 . ((14 . 3) (15 . 3)))
+(17 . ((9 . 6) (16 . 6)))
 "loop counter (loop-head . count) ..."
-(17 . 17)
+(17 . 12)
